--- a/720ImageViewer/3DImageViewer.vcxproj
+++ b/720ImageViewer/3DImageViewer.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="CCPanoramaCamera.cpp" />
     <ClCompile Include="CPngLoader.cpp" />
     <ClCompile Include="CCTexture.cpp" />
+    <ClCompile Include="GlUtils.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
     <ClCompile Include="imgui\imgui_draw.cpp" />
@@ -363,6 +364,7 @@
     <ClInclude Include="zlib\zconf.h" />
     <ClInclude Include="zlib\zlib.h" />
     <ClInclude Include="zlib\zutil.h" />
+    <ClInclude Include="GlUtils.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="3DImageViewer.rc" />
