--- a/720ImageViewer/3DImageViewer.vcxproj
+++ b/720ImageViewer/3DImageViewer.vcxproj
@@ -91,7 +91,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;IMGUI_IMPL_WIN32_DISABLE_GAMEPAD;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
@@ -107,7 +107,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;IMGUI_IMPL_WIN32_DISABLE_GAMEPAD;WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
@@ -155,6 +155,7 @@
     <ClCompile Include="CBMPLoader.cpp" />
     <ClCompile Include="CCamera.cpp" />
     <ClCompile Include="CCFileReader.cpp" />
+    <ClCompile Include="CCGUInfo.cpp" />
     <ClCompile Include="CCMaterial.cpp" />
     <ClCompile Include="CCMeshLoader.cpp" />
     <ClCompile Include="CCObjLoader.cpp" />
@@ -176,6 +177,7 @@
     <ClCompile Include="CCPanoramaCamera.cpp" />
     <ClCompile Include="CPngLoader.cpp" />
     <ClCompile Include="CCTexture.cpp" />
+    <ClCompile Include="CRegDialog.cpp" />
     <ClCompile Include="GlUtils.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
@@ -254,6 +256,7 @@
     <ClCompile Include="libpng\pngwtran.c" />
     <ClCompile Include="libpng\pngwutil.c" />
     <ClCompile Include="Logger.cpp" />
+    <ClCompile Include="PathHelper.cpp" />
     <ClCompile Include="SettingHlp.cpp" />
     <ClCompile Include="StringHlp.cpp" />
     <ClCompile Include="StringSplit.cpp" />
@@ -281,6 +284,7 @@
     <ClInclude Include="CBMPLoader.h" />
     <ClInclude Include="CCamera.h" />
     <ClInclude Include="CCFileReader.h" />
+    <ClInclude Include="CCGUInfo.h" />
     <ClInclude Include="CCMaterial.h" />
     <ClInclude Include="CCMeshLoader.h" />
     <ClInclude Include="CCObjLoader.h" />
@@ -302,6 +306,7 @@
     <ClInclude Include="CCPanoramaCamera.h" />
     <ClInclude Include="CPngLoader.h" />
     <ClInclude Include="CCTexture.h" />
+    <ClInclude Include="CRegDialog.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
     <ClInclude Include="imgui\imgui_impl_opengl3.h" />
@@ -346,6 +351,7 @@
     <ClInclude Include="libpng\pngstruct.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="messages.h" />
+    <ClInclude Include="PathHelper.h" />
     <ClInclude Include="platform.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="SettingHlp.h" />
@@ -378,6 +384,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="help.bmp" />
+    <Image Include="help.ico" />
     <Image Include="logo-small.bmp" />
     <Image Include="logo.bmp" />
     <Image Include="logo.ico" />
