--- a/720App/720App.vcxproj
+++ b/720App/720App.vcxproj
@@ -190,6 +190,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="720App.cpp" />
+    <ClCompile Include="AboutDlg.cpp" />
+    <ClCompile Include="HelpDlg.cpp" />
+    <ClCompile Include="NotifyWnd.cpp" />
     <ClCompile Include="PanoModeWnd.cpp" />
     <ClCompile Include="SImageButtonHover.cpp" />
     <ClCompile Include="TipWnd.cpp" />
@@ -206,6 +209,9 @@
     <ResourceCompile Include="720App.rc" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AboutDlg.h" />
+    <ClInclude Include="HelpDlg.h" />
+    <ClInclude Include="NotifyWnd.h" />
     <ClInclude Include="PanoModeWnd.h" />
     <ClInclude Include="SImageButtonHover.h" />
     <ClInclude Include="TipWnd.h" />
@@ -231,18 +237,23 @@
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
+    <Xml Include="uires\anim\alpha_in.xml" />
+    <Xml Include="uires\anim\alpha_out.xml" />
+    <Xml Include="uires\anim\zoom_in.xml" />
+    <Xml Include="uires\anim\zoom_out.xml" />
     <Xml Include="uires\uidef\init.xml" />
     <Xml Include="uires\values\color.xml" />
     <Xml Include="uires\values\skin.xml" />
     <Xml Include="uires\values\string.xml" />
+    <Xml Include="uires\xml\dlg_about.xml" />
+    <Xml Include="uires\xml\dlg_help.xml" />
     <Xml Include="uires\xml\dlg_main.xml" />
+    <Xml Include="uires\xml\dlg_notify.xml" />
     <Xml Include="uires\xml\dlg_pano_mode.xml" />
     <Xml Include="uires\xml\dlg_shadow.xml" />
     <Xml Include="uires\xml\dlg_tip.xml" />
     <Xml Include="uires\xml\menu_main.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="uires\image\soui.ico" />
+    <Xml Include="uires\xml\menu_right.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
